[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interact/Banheira.gd" type="Script" id=1]
[ext_resource path="res://GFX/Objects/banheira.png" type="Texture" id=2]
[ext_resource path="res://SFX/desentupindo.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 343.101, 41.082 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 356.225, 65.8521 )

[node name="Banheira" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 144.294, 28.8588 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 147.644, 49.6188 )
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 140.192, 25.8596 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SpawnPosition" type="Position2D" parent="."]

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
